###############################
# Veränderungen von kivitendo #
###############################

2021-xx-xx - Release x.x.x

Größere neue Features:

Mittelgroße neue Features:

Kleinere neue Features und Detailverbesserungen:

Bugfixes (Tracker: https://www.kivitendo.de/redmine):


2021-06-25 - Release 3.5.7

Größere neue Features:
  - Modul zur Zeiterfassung. Es ist nun möglich, auftrags-, kunden- oder
    projektbezogen, Arbeitszeiten zu erfassen. Die erfassten Zeiten können
    über einen Hintergrund-Job in Lieferscheine umgewandelt werden.

Mittelgroße neue Features:

 - Der Import von Bankauszügen im MT940-Format wurde komplett neu
   geschrieben. Das externe Programm AQBanking wird nun nicht mehr
   benötigt.
 - Lupe für Projekt-Picker, über die ein Auswahl-Dialog geöffnet werden
   kann.
 - Verbesserungen beim Erzeugen von Mahnungen:
   - erzeugte Dokumente werden zum Mahnlauf abgelegt
   - erzeugte Dokumente im Dateimanagement und im WebDAV werden im
     Bericht angezeigt
   - erzeugte Dokumente werden erst nach der "Mahnungs-Transaktion"
     abgelegt, wenn diese ohne Fehler verlaufen ist, sonst können
     Dokumente ohne Mahnung abgelegt werden
   - Fehler der Mahnläufe werden gesammelt und nach dem Mahnen in
     einem Status-Bericht angezeigt
   - die Verknüpfung bei der Rechnung zur Mahnung führt nicht mehr zum
     Drucken, sondern zum Mahnbericht f. die entsprechende Mahnung
   - der Attachment-Name der Mahnrechnung (mit den Gebühren) enthält
     jetzt die Rechnungsnummer und nicht mehr die Mahnungsnummer
   - Verknüpfung der Mahnungen mit E-Mail-Journal evtl. verschickter
     Mails
   - Anzeige der Mails im Mahnbericht
   - DB-Trigger zum Löschen von Verknüpfungen beim Löschen einer
     Mahnung
 - Neuer Order-Controller: Artikel können während der Erfassung eines
   Angebots bzw. Auftrags erfasst werden.
 - Webshopschnittstelle
   - Überarbeitet und verbessert. Shopstadi werden jetzt gesetzt und
     an den Shop gemeldet