@@ -542,7 +542,6 @@ $self->{texts} = {
   'Calculate'                   => '',
   'Calculate due date automatically' => '',
   'Calling #1 now'              => '',
-  'Can not create that quantity with current stock' => '',
   'Can only delete the "Storno zu" part of the cancellation pair.' => '',
   'Can only save template if amounts,i.e. 1 for debit and credit are set.' => '',
   'Can\'t connect to shop. #1'  => '',
@@ -1786,6 +1785,8 @@ $self->{texts} = {
   'Introduction of clients'     => '',
   'Inv. Duedate'                => '',
   'Invalid'                     => '',
+  'Invalid assembly'            => '',
+  'Invalid bin'                 => '',
   'Invalid charge number: #1'   => '',
   'Invalid combination of ledger account number length. Mismatch length of #1 with length of #2. Please check your account settings. ' => '',
   'Invalid duration format'     => '',
